<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <item android:id="@+id/home" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />




    <item android:id="@+id/myProfile" android:title="@string/my_profile"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/aboutus" android:title="@string/aboutus"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/terms" android:title="@string/Terms_condition"
        android:orderInCategory="100" app:showAsAction="never" />



    <item android:id="@+id/Logout" android:title="@string/Logout"
        android:orderInCategory="100" app:showAsAction="never" />




</menu>
